# leapmotion_with_trigger

./: .gitignore  LICENSE.md  README.md  README_PROJECT.md  README_PROJECT_STRUCTURE.md  Thumbs.db  pyproject.toml  record_with_trigger.py  requirements.txt
archive/: README_ARCHIVE.md  test_record_trigger.py
archive/development/: RECORDING_IMPROVEMENTS.md  record_and_visualize.py  record_and_visualize260120.py  record_handtracking.py  record_simple.py
archive/planning/: implementation_plan.md
arduino/ttl_trigger/: ttl_trigger.ino
docs/: PROJECT_STRUCTURE.md  TIMESTAMP_SYNC.md  USB_IO_INTEGRATION.md
examples/ultraleap_official/: visualiser.py
learning/angle_calculate/: calculate_angle_sample.py
learning/example_nakazono/: leapMotion_python_ROM2.py
learning/usb_io2_0/: usb_io2_0_push_button_sample.py  usb_io2_0_push_button_sample_port_j2_3.py  usb_io2_0_push_button_sample_port_j2_3_short_sleep_time.py
src/: __init__.py  arduino_trigger_monitor.py  record_with_trigger.py  timestamp_sync.py  usb_io_monitor.py
tests/: __init__.py  test_usb_io_monitor.py
tools/: README.md  analyze_finger_angles.py  analyze_hdf_data.py  analyze_recording.py  output_ttl_pulse_by_usb_io2.py  recalculate_timestamp_correction.py  usb_device_info.py  usb_io2_0_TTL_pulse_sample.py  usb_io2_0_led_on_off_sample.py  usb_io2_0_push_button_checker.py  usb_io_polling_benchmark.py  validate_abduction_angles.py  validate_flexion_angles.py  visualize_recording.py
tools/arduino/check_arduino/: check_arduino.ino
tools/arduino/detect_TTL_D2/: detect_TTL_D2.ino
